content/docs/v1.5/configuration/triggers/docker/index.mdx
---
title: "Docker"
description: "The docker trigger lets you replace existing containers with their updated versions."
---

import { Callout } from 'fumadocs-ui/components/callout';
import { Tab, Tabs } from 'fumadocs-ui/components/tabs';

![logo](/docs/assets/configuration/triggers/docker/docker.png)

The `docker` trigger lets you replace existing containers with their updated versions.

The trigger uses a **rename-first** strategy that keeps the original container name available as briefly as possible and supports automatic rollback on failure:

1. Pull the new image
2. Rename the current container to a temporary name (`{name}-old-{timestamp}`)
3. Create a new container with the **original name** and the new image
4. Stop the old (renamed) container (if it was running)
5. Start the new container (if the old one was running)
6. Wait for the new container to become healthy (only when `dd.rollback.auto=true` and a `HEALTHCHECK` is configured, for up to the greater of 120 seconds or `dd.rollback.window`)
7. Remove the old container

If **any step fails**, the trigger automatically rolls back:

1. Stop and remove the new container (best-effort)
2. Rename the old container back to the original name
3. Restart the old container (if it was previously running)

If Drydock restarts while an update is in progress, it automatically reconciles the interrupted operation on startup — restoring the old container or cleaning up stale temporaries as needed. When [Update Bouncer](/docs/configuration/security) is configured, candidate images are scanned for vulnerabilities before the update proceeds. If the scan finds blocking issues, the update is aborted and a `security-alert` notification is sent.

## Variables

| Env var | Required | Description | Supported values | Default value when missing |
| ------------------------------------------ | :--------------: | ----------------------------------------------------- | ---------------- | -------------------------- |
| `DD_ACTION_DOCKER_{trigger_name}_PRUNE` | ⚪ | If old image versions must be pruned | `true`, `false` | `false` |
| `DD_ACTION_DOCKER_{trigger_name}_DRYRUN` | ⚪ | When enabled, only pull the new image ahead of time | `true`, `false` | `false` |
| `DD_ACTION_DOCKER_{trigger_name}_BACKUPCOUNT` | ⚪ | Number of image backups to retain per container | Integer | `3` |
| `DD_ACTION_DOCKER_{trigger_name}_AUTOREMOVETIMEOUT` | ⚪ | Wait timeout for container auto-removal (ms) | Integer | `10000` |

This trigger also supports the [common configuration variables](/docs/configuration/triggers/#common-trigger-configuration). It picks up the Docker configuration from the [configured Docker watchers](/docs/configuration/watchers) so it can handle updates on Local **and** Remote Docker hosts.

<Callout type="info">**Opt-in by default:** The Docker trigger defaults to `AUTO=oninclude`, meaning it only updates containers that explicitly opt in with a `dd.action.include` label (e.g., `dd.action.include=docker`). To auto-update all watched containers, set `DD_ACTION_DOCKER_{trigger_name}_AUTO=true`.</Callout>

<Callout type="warn">**Agent mode:** When using [distributed agents](/docs/configuration/agents), each agent needs its own Docker trigger configured (e.g., `DD_ACTION_DOCKER_LOCAL_PRUNE=true`). The `{trigger_name}` segment is required — `DD_ACTION_DOCKER_PRUNE=true` without a name is invalid and will not create a working trigger. The controller does **not** need Docker triggers for remote agents; agent triggers are discovered automatically during the handshake.</Callout>

## Update Concurrency

By default, drydock runs container updates concurrently. Two serialization layers apply automatically:

- **Per-container lock** — prevents the same container from being updated twice in parallel.
- **Per-compose-project lock** — serializes services within the same compose stack so `docker compose up` orchestration is safe (two unrelated containers can still update simultaneously).

To limit the total number of simultaneous update lifecycles across your entire instance, set `DD_UPDATE_MAX_CONCURRENT`:

| Env var | Default | Description |
| --- | --- | --- |
| `DD_UPDATE_MAX_CONCURRENT` | `0` (unlimited) | Max simultaneous update lifecycles across the entire controller instance. Self-update bypasses this cap. |

See [Container Actions — Global Concurrency Cap](/docs/configuration/actions#global-concurrency-cap) for full semantics.

## Image Backup & Rollback

Every time a container is updated, Drydock automatically backs up the previous image metadata. Backups are retained per container up to the `BACKUPCOUNT` limit (default: 3), with older backups pruned automatically.

You can roll back to any retained backup via the API:

```text
POST /api/v1/containers/{id}/rollback
```

Optionally pass a specific backup ID in the request body:

```json
{ "backupId": "uuid" }
```

If omitted, the most recent backup is used. Rollback pulls the backup image, stops the current container, recreates it with the backup image, and starts it.

## Auto-Rollback

Drydock can automatically roll back a container update if the container becomes unhealthy. This requires the container to have a Docker `HEALTHCHECK` defined.

Configure auto-rollback using container labels:

| Label | Description | Default |
| --- | --- | --- |
| `dd.rollback.auto` | Enable auto-rollback on health failure | `false` |
| `dd.rollback.window` | Monitoring window in milliseconds | `300000` (5 min) |
| `dd.rollback.interval` | Health check poll interval in milliseconds | `10000` (10 sec) |

When `dd.rollback.auto` is enabled, Drydock first waits for the recreated container to report `healthy` before it finalizes the update. The initial gate lasts up to the greater of 120 seconds or `dd.rollback.window`. After that, it continues polling the container health status at the configured interval. If the container becomes `unhealthy` within the monitoring window, an automatic rollback is triggered. If the window expires without failure, the container is considered stable.

## Lifecycle Hooks

You can run commands before and after a container update using container labels:

| Label | Description | Default |
| --- | --- | --- |
| `dd.hook.pre` | Command to run before the update | |
| `dd.hook.post` | Command to run after the update | |
| `dd.hook.pre.abort` | Abort the update if the pre-hook fails | `true` |
| `dd.hook.timeout` | Hook timeout in milliseconds | `60000` (1 min) |

Hooks execute via `/bin/sh -c` inside the Drydock container. The following environment variables are available to hook commands:

| Variable | Description |
| --- | --- |
| `DD_CONTAINER_NAME` | Container name |
| `DD_CONTAINER_ID` | Container ID |
| `DD_IMAGE_NAME` | Image name (without registry) |
| `DD_IMAGE_TAG` | Current image tag |
| `DD_UPDATE_KIND` | `tag` or `digest` |
| `DD_UPDATE_FROM` | Current tag or digest |
| `DD_UPDATE_TO` | New tag or digest |

A non-zero exit code or timeout is treated as failure. When `dd.hook.pre.abort` is `true` (the default), a failed pre-hook prevents the update from proceeding.

<Callout type="warn">Hook commands are validated against a restricted shell-safe grammar at configuration time. Commands containing `$(...)`, backticks, redirections (`<`, `>`), or chaining metacharacters (`;`, `&`, `|`) are rejected with a clear error at startup. Allowed: a single command with arguments, single/double-quoted strings, and `$VAR` / `${VAR}` variable references.</Callout>

<Callout type="warn">Hook labels are ignored unless `DD_HOOKS_ENABLED=true` is set on the Drydock container.</Callout>

Lifecycle hooks are **not** executed during self-updates. When hook labels are present, Drydock records `hook-configured` in the audit log before execution, then `hook-pre-*` / `hook-post-*` based on outcomes.

## Compose File Sync

When the Docker trigger updates a container that was originally started via Docker Compose, Drydock automatically patches the image tag in the compose file so that subsequent `docker compose up` commands do not revert the update. The compose file path is resolved from the `com.docker.compose.project.config_files` label that Docker Compose sets on every container it creates.

This is a best-effort operation — if the compose file is not writable or cannot be resolved, the container update still succeeds and a warning is logged.

<Callout type="info">If you manage compose-based containers with the [Docker Compose trigger](/docs/configuration/triggers/docker-compose) instead, that trigger handles compose file updates natively and this sync is not needed.</Callout>

## Self-Update

Drydock can update itself. When it detects that its own container has an available update, it performs a safe self-replacement sequence:

1. Notifies connected UI clients (full-screen overlay)
2. Backs up the current image metadata
3. Pulls the new image while the current container is still running
4. Renames the old container to `drydock-old-{timestamp}`
5. Creates a new container with the original name and new image
6. Spawns a temporary helper container — with its own Docker access (the bind-mounted socket, or a TCP connection on Drydock's network) — that stops the old container and starts the new one
7. The UI auto-reconnects to the new instance

If any step fails, Drydock falls back to the previous container automatically.

<Callout type="warn">Self-update requires Drydock to reach the Docker daemon — either a bind-mounted socket at `/var/run/docker.sock` or a TCP Docker host — and a Docker trigger to be enabled. See [Self-Update](/docs/configuration/self-update) for the socket-proxy case.</Callout>

## Infrastructure Update Mode

When Drydock connects to the Docker API through a socket proxy (like `tecnativa/docker-socket-proxy` or `lscr.io/linuxserver/socket-proxy`), updating that proxy through the normal update path severs Drydock's API connection mid-update — leaving the old container running and the new one stuck in `created` state.

The `dd.update.mode=infrastructure` label solves this by routing the update through the same helper-container path used for self-updates. The helper connects directly to `/var/run/docker.sock`, bypassing the proxy entirely, so the proxy can be safely stopped and replaced.

```yaml
services:
  socket-proxy:
    image: lscr.io/linuxserver/socket-proxy:latest
    container_name: drydock-socket-proxy
    labels:
      - dd.watch=true
      - dd.update.mode=infrastructure
    volumes:
      - /var/run/docker.sock:/var/run/docker.sock
    environment:
      - CONTAINERS=1
      - IMAGES=1
      - EVENTS=1
    restart: unless-stopped
```

The update sequence for infrastructure containers:

1. Pulls the new image while the current proxy is still running
2. Renames the old container to `{name}-old-{timestamp}`
3. Creates a new container with the original name and new image
4. Spawns a helper container (using the Drydock image) that stops the old proxy and starts the new one via the raw Docker socket
5. Drydock automatically reconnects to the new proxy instance

If any step fails, the helper rolls back to the previous container automatically.

<Callout type="warn">Infrastructure update mode requires the target container to have `/var/run/docker.sock` bind-mounted (which socket proxies do by default). Drydock must also be watching itself so it can resolve its own image for the helper container.</Callout>

<Callout type="info">This works in both standalone and [agent](/docs/configuration/agents) deployments. Agents handle their own infrastructure updates automatically — no controller-side coordination is needed.</Callout>

## Examples

<Tabs items={["Docker Compose", "Docker"]}>
<Tab value="Docker Compose">

```yaml
services:
  drydock:
    image: codeswhat/drydock:v1.5.2
    ...
    environment:
      - DD_ACTION_DOCKER_EXAMPLE_PRUNE=true
```

</Tab>
<Tab value="Docker">
```bash
docker run \
  -e "DD_ACTION_DOCKER_EXAMPLE_PRUNE=true" \
  ...
  codeswhat/drydock:v1.5.2
```
</Tab>
</Tabs>

### Auto-rollback with health checks

Add these labels to a container to enable automatic rollback if it becomes unhealthy after an update:

```yaml
services:
  myapp:
    image: myapp:latest
    labels:
      - dd.watch=true
      - dd.rollback.auto=true
      - dd.rollback.window=300000
    healthcheck:
      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
      interval: 10s
      timeout: 5s
      retries: 3
```

### Infrastructure container (socket proxy)

Enable safe auto-updates for a Docker socket proxy:

```yaml
services:
  socket-proxy:
    image: lscr.io/linuxserver/socket-proxy:latest
    labels:
      - dd.watch=true
      - dd.update.mode=infrastructure
    volumes:
      - /var/run/docker.sock:/var/run/docker.sock
    environment:
      - CONTAINERS=1
      - IMAGES=1
      - EVENTS=1
    restart: unless-stopped
```

### Lifecycle hooks

Run a database migration before updating and a cache clear after:

```yaml
services:
  myapp:
    image: myapp:latest
    labels:
      - dd.watch=true
      - dd.hook.pre=curl -X POST http://myapp:8080/prepare-update
      - dd.hook.post=curl -X POST http://myapp:8080/clear-cache
      - dd.hook.pre.abort=true
      - dd.hook.timeout=30000
```
